; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/cio/extr_qdio_thinint.c_set_subchannel_ind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/cio/extr_qdio_thinint.c_set_subchannel_ind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.qdio_irq = type { %struct.TYPE_6__, i32, i64 }
%struct.TYPE_6__ = type { i32 }
%struct.chsc_scssc_area = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@tiqdio_airq = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@.str = private unnamed_addr constant [14 x i8] c"%4x SSI r:%4x\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"setscind\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qdio_irq*, i32)* @set_subchannel_ind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_subchannel_ind(%struct.qdio_irq* %0, i32 %1) #0 {
  %3 = alloca %struct.qdio_irq*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.chsc_scssc_area*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.qdio_irq* %0, %struct.qdio_irq** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.qdio_irq*, %struct.qdio_irq** %3, align 8
  %10 = getelementptr inbounds %struct.qdio_irq, %struct.qdio_irq* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to i8*
  %13 = bitcast i8* %12 to %struct.chsc_scssc_area*
  store %struct.chsc_scssc_area* %13, %struct.chsc_scssc_area** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %2
  store i64 0, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %24

17:                                               ; preds = %2
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @tiqdio_airq, i32 0, i32 0), align 4
  %19 = call i64 @virt_to_phys(i32 %18)
  store i64 %19, i64* %6, align 8
  %20 = load %struct.qdio_irq*, %struct.qdio_irq** %3, align 8
  %21 = getelementptr inbounds %struct.qdio_irq, %struct.qdio_irq* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i64 @virt_to_phys(i32 %22)
  store i64 %23, i64* %7, align 8
  br label %24

24:                                               ; preds = %17, %16
  %25 = load %struct.qdio_irq*, %struct.qdio_irq** %3, align 8
  %26 = getelementptr inbounds %struct.qdio_irq, %struct.qdio_irq* %25, i32 0, i32 0
  %27 = load %struct.chsc_scssc_area*, %struct.chsc_scssc_area** %5, align 8
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @chsc_sadc(i32 %31, %struct.chsc_scssc_area* %27, i64 %28, i64 %29)
  store i32 %32, i32* %8, align 4
  %33 = load i32, i32* %8, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %45

35:                                               ; preds = %24
  %36 = load %struct.qdio_irq*, %struct.qdio_irq** %3, align 8
  %37 = getelementptr inbounds %struct.qdio_irq, %struct.qdio_irq* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = load %struct.chsc_scssc_area*, %struct.chsc_scssc_area** %5, align 8
  %41 = getelementptr inbounds %struct.chsc_scssc_area, %struct.chsc_scssc_area* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @DBF_ERROR(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %39, i32 %43)
  br label %49

45:                                               ; preds = %24
  %46 = call i32 @DBF_EVENT(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %47 = call i32 @DBF_HEX(i64* %6, i32 8)
  %48 = call i32 @DBF_HEX(i64* %7, i32 8)
  br label %49

49:                                               ; preds = %45, %35
  %50 = load i32, i32* %8, align 4
  ret i32 %50
}

declare dso_local i64 @virt_to_phys(i32) #1

declare dso_local i32 @chsc_sadc(i32, %struct.chsc_scssc_area*, i64, i64) #1

declare dso_local i32 @DBF_ERROR(i8*, i32, i32) #1

declare dso_local i32 @DBF_EVENT(i8*) #1

declare dso_local i32 @DBF_HEX(i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
